FIX : align on footer

--- a/app.css
+++ b/app.css
@@ -114,6 +114,7 @@ header{
     padding: 0;
     gap: 35px;
 }
+
 /* CONTAINERS FEATURES */
 /* .dash-cont-1{
     height: 350px;
@@ -141,9 +142,10 @@ header{
 .container > *{
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
+    justify-content: center;  
 }
+
+
 h1{
     padding-bottom: 25px;
     font-size: 30px;
@@ -219,6 +221,9 @@ main > :first-child{
 .al-left{
     text-align: left;
 }
+.icon-and-lg{
+    
+}
 .lg-selector{
     display: inline-block;
 }
@@ -232,8 +237,24 @@ main > :first-child{
 }
 
 ul > *{
-    align-items: flex-start ;
-    padding-left: 0;
+    font-size: 12px;
+}
+.ft-container{
+    display: flex;
+}
+.ft-container > *{
+    flex-direction: column;
+}
+
+.ft-row > *{
+    text-align: left;
+    margin: 15px;
+    flex-wrap: wrap;
+}
+
+h3,
+h3 > *{
+    font-size: 12px;
 }
 /* DEBUG RULES */
 
